docs: added slack setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-ADDRESS=
 SLACK_BOT_TOKEN=
 SLACK_CHANNEL_ID=
 ALCHEMY_AUTH_TOKEN=
+
+# ADDRESS_LIST <string separated by commas> = '0xa, 0xb, 0xc'
 ADDRESS_LIST=
+
+# ADDRESS_NAMES <string separated by commas> = 'name_a, name_b, name_c'
+ADDRESS_NAMES=
